将setData的测试用例继续拆分，让同一类型的输入对应一个测试用例文件。

--- a/server/doc/com.zizibujuan.drip.doc/doc/支持输入的字符.md
+++ b/server/doc/com.zizibujuan.drip.doc/doc/支持输入的字符.md
@@ -18,6 +18,8 @@ insertInfo对象：
 支持输入：
 
 * 数字或分母
+* 输入回车符号
+* 输入tab符号
 * 基本数学符号
 * 上下标
 * 分数
@@ -29,11 +31,14 @@ insertInfo对象：
 * 包含关系
 
 
+
 敲击的键盘 | 输入的内容 | 对应的mathml节点 | 名称 | 备注
 ---------| -------- | -------------  | -----| ----------- 
 a-z | a-z | mi | 小写字母 | 一个mi封装一个字符
 A-Z | A-Z | mi | 大写字母 | 一个mi封装一个字符 
 0-9 | 0-9 | mn | 数字    | 一个mn可封装1-n个字符
+Enter | \\n |  | 新建一行 | `<line></line>`
+Tab | \\t |  | 插入一个制表符 | `\t`
 +   | +   | mo | 加号    | `<mo>+</mo>`
 -   | -   | mo | 减号    | `<mo>-</mo>`
 *   | `&#xD7;` | mo | 乘号 | `<mo>&#xD7;</mo>`
