第一个版本不支持输入分数时，将光标前的节点转换为分子。 如果需要，后续版本中考虑实现。

--- a/server/doc/com.zizibujuan.drip.doc/doc/支持输入的字符.md
+++ b/server/doc/com.zizibujuan.drip.doc/doc/支持输入的字符.md
@@ -123,7 +123,8 @@ ydy |&#x2248; | mo | 约等于 | `<mo>&#x2248;</mo>`
 
 
 #### 分子推导规则
-在输入分数时，要对周围的值进行计算，确定出适合做分子的值和适合做分母的值
+在输入分数时，要对周围的值进行计算，确定出适合做分子的值和适合做分母的值,完成后分母自动获取焦点。
+如果前面是操作符，则不可以做分数。一直往前找，直到遇到操作符号。
 
 
 
